OD-245 Adds page_size and search endpoint param
-enables param to be passed from the endpoint to the code base
-if not param is passed it defaults to a page_size of 5000
-raises an error if page_size is out of range
-updates api.yml with no param
